--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -46,7 +46,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <h2 class="titular-header"><a href="/">Presupuestos Municipales Abiertos {% block titulo %} {% endblock %}</a></h2>
+              <h2 class="titular-header"><a href="/">Presupuestos Municipales Abiertos</a></h2>
             </div>
             <div id="navbar" class="navbar-collapse collapse pull-right">
               <ul class="nav navbar-nav">
