--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -38,9 +38,9 @@
               <div style="background-color: #fff;clear: both; width: 500px; height: 50px;display:inline;" id="selections"></div>
               {% load i18n flatpages %}
               {% get_flatpages '/transferencias-presupuestarias/' as pages %}
-              <h3>Importancia de las Transferencias</h3>
               {% for page in pages %}
-                <p class="text-justify col-md-11" style="margin-left:-15px;">{{ page.content|safe|truncatewords:100 }}<a href="{{ page.url }}" class="text-primary"> leer m&aacute;s</a></p>
+                <h3>{{ page.title }}</h3>
+                <p class="text-justify col-md-11" style="margin-left:-15px;">{{ page.content|safe|truncatewords:80 }}<a href="{{ page.url }}" class="text-primary"> leer m&aacute;s</a></p>
               {% endfor %}
               <h4 class="text-info" style="margin-top:20px;">Consulte</h4>
               <a href="{% url 'documento_by_tipo' 'marco-legal' %}"><button class="recuadro btn btn-primary">
@@ -112,7 +112,7 @@
 {% endblock %}
 {% block main_content %}
         <div class="clear"></div>
-        <div class="text-center"><h2 class="titular">Presupuesto Municipal 2015</h2>
+        <div class="text-center"><h2 class="titular">Presupuesto Sector Municipal 2015</h2>
             <hr />
         </div>
         {{ charts|load_charts:"oim_ejecutado, ogm_ejecutado, inversion, inversion_area, fuentes" }}
@@ -137,14 +137,16 @@
     <section id="inversiones" class="main">
         <div class="container">
             <div class="row">
-                <div class="text-center"><h2 class="titular" style="margin-bottom:40px;">Inversi&oacute;n Municipal 2015</h2></div>
+                <div class="text-center"><h2 class="titular" style="margin-bottom:40px;">Inversi&oacute;n Sector Municipal 2015</h2></div>
                 <div class="col-md-2">
                     <div class="clearfix">
                         <div class="pull-right">
                             <a class="prev" href="#myCarousel" data-slide="prev"><i class="icon-angle-left icon-large"></i></a> <a class="next" href="#myCarousel" data-slide="next"><i class="icon-angle-right icon-large"></i></a>
                         </div>
                     </div>
-                    <p> Los gobiernos municipales, asignarán anualmente de las transferencias de inversión los porcentajes mínimos para los siguientes sectores priorizados: Salud 5%, Educación 5%, Medio Ambiente 5%, Agua y Saneamiento 7.5%.</p>
+                    <p><span class="text-info"><strong>* Invertido en el periodo</strong></p>
+                    <p><span class="text-danger"><strong>** Minimo por ley</strong>:
+                    Los gobiernos municipales, asignarán anualmente de las transferencias de inversión los porcentajes mínimos para los siguientes sectores priorizados: Salud 5%, Educación 5%, Medio Ambiente 5%, Agua y Saneamiento 7.5%.</p>
                 </div>
 		<div class="col-md-10">
     		    <div id="carousel-inv" class="carousel slide" data-ride="carousel">
@@ -163,7 +165,8 @@
                                 <li class="col-md-3 col-sm-3 col-xs-6">
                                   <img src="{% static 'img/'|add:i.catinversion__slug|add:'.png' %}" class="img-responsive" alt="" />
                                   <a href="#">{{ i.catinversion__nombre }}</a>
-                                  <p>{% widthratio i.ejecutado total_inversion.ejecutado 100 %}%</p>
+                                  <p class="cifra text-info">* {% widthratio i.ejecutado total_inversion.ejecutado 100 %}% <br />
+                                  <span class="text-danger cifra" style="font-size:28px;">{% if i.catinversion__minimo %}* {{ i.catinversion__minimo }}%{% endif %}</span>
                                 </li>
                             {% if forloop.last or forloop.counter|divisibleby:4 %}
                                 </ul>
@@ -183,26 +186,24 @@
                 </div>
             </div>
             <hr />
-	<div class="col-md-12">
-	    <div class="col-md-6">
-		<div class="panel panel-primary">
-            <div class="panel-heading"><h3>Inversión mínima de los ingresos <br />corrientes por categoría</h3></div>
-			<div class="panel-body">
-              <div id='inversion_area'>
-              </div>
-			</div>
+	    <div class="col-md-12">
+		    <div class="panel panel-primary">
+                <div class="panel-heading"><h3>Inversión mínima de los ingresos  corrientes por categoría de municipio</h3></div>
+			    <div class="panel-body">
+                    <div id='inversion_area'>
+                    </div>
+		    	</div>
+		    </div>
 		</div>
-	    </div>
-	    <div class="col-md-6">
-		<div class="panel panel-success">
-			<div class="panel-heading"><h3>Inversión mínima por sector priorizado</h3></div>
-			<div class="panel-body">
-              <div id='inversion'>
-              </div>
+	    <div class="col-md-12">
+		    <div class="panel panel-success">
+			    <div class="panel-heading"><h3>Inversión mínima por sector priorizado</h3></div>
+			    <div class="panel-body">
+                    <div id='inversion'>
+                </div>
 			</div>
 	    </div>	
 	</div>
-    </div>
    </section>
     <div class="clear"></div>
    <script type="text/javascript">
