--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -6,7 +6,7 @@
 {{ obj.nombre }}
 {% endblock %}
 {% block main_content %}
-<h2 class="titular">Destino de los gastos  {{ anio }} </h2>
+    <h2 class="titular">Destino de los gastos   {{ request.GET.municipio|capfirst }} {{ anio }} </h2>
     <form method="GET">
     <select name="year">
     {% for year in year_list %}
@@ -34,8 +34,10 @@
     {% endif %}
     <div id="oimTabContent" class="tab-content">
       <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
-          <h3>Gastos totales</h3><br />
         <div class="col-md-6">
+            <h3>Gastos del período</h3>
+            <h4 class="text-info">Porcentaje de los gastos totales</h4>
+            <hr />
             {% for total in totales %}
               <div class="row totales">
                 <div class="col-md-8 text-left">
@@ -50,6 +52,8 @@
         </div>
         <!-- tabla solo un año -->
         <div class="col-md-6">
+          <h3>Gastos del período</h3>
+          <h4 class="text-info">Millones de c&oacute;rdoba corrientes</h4>
           <table class="table table-condensed">
             <tr class="info">
               <th></th>
@@ -94,7 +98,8 @@
       </div>
       <div role="tabpanel" class="tab-pane fade" id="oimorigen" aria-labelledby="oimorigen-tab">
         <div class="col-md-12">
-        <h3>Gastos totales de los &uacute;ltimos a&ntilde;os</h3>
+            <h3>Gastos por períodos</h3>
+            <h4 class="text-info">Millones de c&oacute;rdoba corrientes</h4>
           <table class="table table-condensed">
             <tr  class="info">
               <th></th>
