--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block main_content %}
-    <h2 class="titular">Origen de los ingresos {{ anio }}</h2>
+    <h2 class="titular">Origen de los ingresos  {{ request.GET.municipio|capfirst }} {{ anio }}</h2>
     <form method="GET">
     <select name="year">
     {% for year in year_list %}
@@ -35,7 +35,9 @@
     <div id="oimTabContent" class="tab-content">
       <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
           <div class="col-md-5">
-              <h3>Ingresos totales</h3>
+              <h3>Ingresos del período</h3>
+              <h4 class="text-info">Porcentaje de los ingresos totales</h4>
+              <hr />
             {% for total in totales %}
               <div class="row totales">
                 <div class="col-md-9 text-left">
@@ -53,11 +55,14 @@
             {% endfor %}
           </div>
         <div class="col-md-7">
-           <h3>Ingresos totales</h3>
+              <h3>Ingresos del período</h3>
+              <h4 class="text-info">Millones de c&oacute;rdoba corrientes</h4>
+              <hr />
           <table class="table table-condensed">
             <tr class="info">
               <th></th>
-              <th>{{ anio }}</th>
+              <th>Asignado</th>
+              <th>Ejecutado</th>
               {% if municipio %}
               <th>Promedio de categor&iacute;a</th>
               {% endif %}
@@ -65,6 +70,7 @@
             {% for key, data in porano.items %}
              <tr>
                <td class="text-left">{{ key }}</td>
+               <td class="text-center">{{ data|keyvalue:anio|intword }}</td>
                <td class="text-center">{{ data|keyvalue:anio|intword }}</td>
               {% if municipio %}
                <td>{{ data.extra|intword }}</td>
@@ -93,7 +99,8 @@
           <div id='comparativo3' class="col-md-7"> Chart will be rendered here </div>
       </div>
       <div role="tabpanel" class="tab-pane fade" id="oimorigen" aria-labelledby="oimorigen-tab">
-          <h3>Ingresos Totales</h3>
+            <h3>Ingresos por períodos</h3>
+            <h4 class="text-info">Millones de c&oacute;rdoba corrientes</h4>
           <table class="table table-condensed">
             <tr class="info">
               <th></th>
