--- a/website/templates/flatpages/default.html
+++ b/website/templates/flatpages/default.html
@@ -4,10 +4,11 @@
 {% block content %}
 <div class="row">
     <div class="col-md-10">
-    <h3 class="text-primary">{{ flatpage.title }}</h3>
-    <div class="text-left">
+        <h3 class="text-primary">{{ flatpage.title }}</h3>
+        <div class="pull-left" style="margin-right: 20px;"><iframe width="560" height="315" src="https://www.youtube.com/embed/DTDBq9qY7ms" frameborder="0" allowfullscreen></iframe></div>
+        <div class="text-left">
         {{ flatpage.content|urlize|linebreaks }}
-    </div>
+        </div>
     </div>
 </div>
 
